--- a/app/src/main/res/layout/activity_places_geo.xml
+++ b/app/src/main/res/layout/activity_places_geo.xml
@@ -12,8 +12,7 @@
         android:id="@+id/idCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_margin="@dimen/dimen_16"
         app:cardCornerRadius="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
